# AetherCast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  android_apk_signing.md  capacitor.config.ts  docker-compose.yml  metadata.json  nixpacks.toml  package-lock.json  package.json  server.ts  tsconfig.json
.github/workflows/: release.yml
android/app/: aethercast-release.keystore  build.gradle
docs/: desktop-soak-test-plan.md  lumina-bridge-contract.md  lumina-e2e-test-pack.md  native-8h-hardening.md  obs-parity-roadmap.md  streaming-reliability-foundation.md  virtual-camera.md
public/downloads/: aethercast-camera.apk
scripts/: aethercast-logs.mjs  analyze-native-diagnostics.mjs  bundle-ffmpeg.ps1  check-ci.mjs  check-release.mjs  check-server.mjs  coolify-env.mjs  coolify-logs.mjs  create-release.mjs  delete-release.mjs  list-coolify-apps.mjs  list-releases.mjs  ndi-input-sidecar.cjs  ndi-sidecar.cjs  send-lumina-bridge-event.mjs  set-gh-secrets.mjs
src/: App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/engine/: audio.rs  capture.rs  diagnostics.rs  mod.rs  ndi.rs  output.rs  service.rs  source.rs  state.rs  telemetry.rs  video.rs  virtual_camera.rs
src/components/: AppDownload.tsx  AudienceLanding.tsx  AudienceStudio.tsx  Compositor.tsx  ErrorBoundary.tsx  LayoutStudio.tsx  MobileHome.tsx  MobileModeBar.tsx  MobileOnboarding.tsx  PhoneScreenView.tsx  QrScanner.tsx  RemoteCameraView.tsx
src/hooks/: useAIDirector.ts  useBrowserSourceRuntime.ts  useCompositorWorker.ts  useGPUStreaming.ts  useKeepAwake.ts  useMIDI.ts  useMediaPlayer.ts  useNativeEngine.ts  useNativeSourceFeeds.ts  useNotifications.test.ts  useNotifications.ts  useProAudio.ts  (+9 more)
(+65 files in other folders)
