[package]
name = "selton-studio"
version = "1.0.22"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
bytes = "1.5"
ringbuf = "0.3"
base64 = "0.22"
futures-util = "0.3"
tokio-tungstenite = "0.28"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
